--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.7.3</title>
+    <title>FIKO 0.7.4</title>
 
     <link
       rel="icon"
@@ -235,7 +235,7 @@
                 <code>&lt;class='border'&gt;</code>
               </p>
               <a href="#" class="card-button">
-                <button>Don't click this!</button>
+                <button>Don't click!</button>
               </a>
             </article>
 
@@ -514,16 +514,17 @@
             <hgroup>
               <h2>Auto centering</h2>
             </hgroup>
+            <blockquote>
+              <em>
+                "This block is automatically centred."
+              </em>
+            </blockquote>
             <p>
-              <em>This is automatically centred.</em>
-              <br />
-              <small>
-                Just use the
-                <code>&lt;article&gt;</code>
-                HTML element.
-                <br />
-                Cool huh?!
-              </small>
+              Use the
+              <code>&lt;article&gt;</code>
+              HTML element to get auto-centering.
+
+              <small class="ob">Pretty Cool huh?!</small>
             </p>
           </article>
         </section>
@@ -546,6 +547,11 @@
           <span>
             Full width
             <code>&lt;article&gt;</code>
+            <small>
+              inside a
+              <code>.border</code>
+              div
+            </small>
           </span>
         </article>
       </div>
