grays, article.row, invert header radius | v0.7.10

--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.7.9</title>
+    <title>FIKO 0.7.10</title>
 
     <link
       rel="icon"
@@ -482,25 +482,53 @@
         </hgroup>
       </article>
 
-      <article class="invert">
-        <header>
-          <code>&lt;article class="invert"&gt;</code>
-        </header>
-        <p>Flips light/dark mode.</p>
-        <footer>Conveninet!</footer>
-      </article>
+      <section class="container">
+        <article class="invert">
+          <header>
+            <code>&lt;article class="invert"&gt;</code>
+          </header>
+          <p>Flips light/dark mode.</p>
+          <footer>Convenient!</footer>
+        </article>
 
-      <article class="border">
-        <header>
-          <code>&lt;article class="border"&gt;</code>
-        </header>
-        <p>Shows the border</p>
+        <article class="border">
+          <header>
+            <code>&lt;article class="border"&gt;</code>
+          </header>
+          <p>Shows the border</p>
 
-        <footer>
-          &lt;article&gt;, &lt;header&gt;, &lt;footer&gt;
-          Are all centered!
-        </footer>
-      </article>
+          <footer>
+            &lt;article&gt;, &lt;header&gt;, &lt;footer&gt;
+            Are all centered!
+          </footer>
+        </article>
+      </section>
+
+      <hr />
+      <section class="rows">
+        <article class="rows">
+          <header>header</header>
+          <footer>footer</footer>
+        </article>
+        <article class="rows">
+          <header>header</header>
+          <footer>footer</footer>
+        </article>
+        <article class="rows">
+          <header>header</header>
+          <footer>footer</footer>
+        </article>
+        <article class="rows">
+          <header>header</header>
+          <footer>footer</footer>
+        </article>
+        <article class="rows">
+          <header>header</header>
+          <footer>footer</footer>
+        </article>
+      </section>
+
+      <hr />
 
       <div class="to_do container">
         <section data-type="modal">
