--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.7.10</title>
+    <title>FIKO 0.7.11</title>
 
     <link
       rel="icon"
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="invert alfa_BG">
+    <header class="invert">
       <nav class="toggle-wrapper">
         <h1>FIIIIIIKO&nbsp;</h1>
 
@@ -253,67 +253,72 @@
 
           <!-- Figure  -->
           <figure>
-            <table role="grid">
+            <table role="grid" class="striped">
               <thead>
                 <tr>
-                  <th scope="col">1</th>
-                  <th scope="col">2</th>
-                  <th scope="col">3</th>
-                  <th scope="col">4</th>
-                  <th scope="col">5</th>
-                  <th scope="col">6</th>
-                  <th scope="col">7</th>
-                  <th scope="col">8</th>
+                  <th scope="col">Planet</th>
+                  <th scope="col">Venus</th>
+                  <th scope="col">Mercury</th>
+                  <th scope="col">Jupiter</th>
+                  <th scope="col">Mars</th>
+                  <th scope="col">Saturn</th>
+                  <th scope="col">Earth</th>
+                  <th scope="col">Average</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row">Cell</th>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
+                  <th scope="row">Diameter (km)</th>
+                  <td>12,104</td>
+                  <td>4,880</td>
+                  <td>6,779</td>
+                  <td>6,779</td>
+                  <td>6,779</td>
+                  <td>12,742</td>
+                  <td>9,126</td>
                 </tr>
                 <tr>
-                  <th scope="row">Cell</th>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
+                  <th scope="row">Distance to Sun (AU)</th>
+                  <td>0.72</td>
+                  <td>0.39</td>
+                  <td>1.52</td>
+                  <td>1.52</td>
+                  <td>1.52</td>
+                  <td>1.00</td>
+                  <td>0.91</td>
                 </tr>
                 <tr>
-                  <th scope="row">Cell</th>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
-                  <td>Cell</td>
+                  <th scope="row">Orbit (days)</th>
+                  <td>225</td>
+                  <td>88</td>
+                  <td>687</td>
+                  <td>687</td>
+                  <td>687</td>
+                  <td>365</td>
+                  <td>341</td>
+                </tr>
+                <tr>
+                  <th scope="row">Chinese Element</th>
+                  <td>Metal</td>
+                  <td>Water</td>
+                  <td>Wood</td>
+                  <td>Fire</td>
+                  <td>Earth</td>
+                  <td>n.a.</td>
+                  <td>n.a.</td>
+                </tr>
+
+                <tr>
+                  <th scope="row">Chinese animal</th>
+                  <td>White Tiger</td>
+                  <td>Black Tortoise</td>
+                  <td>Azure Dragon</td>
+                  <td>Vermilion Bird</td>
+                  <td>Yellow Dragon</td>
+                  <td>n.a.</td>
+                  <td>n.a.</td>
                 </tr>
               </tbody>
-              <tfoot>
-                <tr>
-                  <th scope="col">Total&nbsp;</th>
-                  <td scope="col">Total&nbsp;</td>
-                  <td scope="col">Total&nbsp;</td>
-                  <td scope="col">Total&nbsp;</td>
-                  <td scope="col">Total&nbsp;</td>
-                  <td scope="col">Total&nbsp;</td>
-                  <td scope="col">Total&nbsp;</td>
-                  <td scope="col">Total&nbsp;</td>
-                  <td scope="col">Total&nbsp;</td>
-                </tr>
-              </tfoot>
             </table>
           </figure>
 
@@ -557,12 +562,14 @@
 
     <!-- Footer -->
     <footer class="invert">
-      <article>
-        <div>
-          FIKO
-          <span class="invert">🐸</span>
-          CSS &copy;2023 TOYBREAKER
-        </div>
+      <article class="container">
+        <header>
+          <p>
+            FIKO
+            <span class="invert">🐸</span>
+            CSS &copy;2023 TOYBREAKER
+          </p>
+        </header>
 
         <button
           class="theme-switch"
@@ -625,7 +632,9 @@
           </a>
         </small>
 
-        <small><a id="pixelratio"></a></small>
+        <footer>
+          <small><a id="pixelratio"></a></small>
+        </footer>
       </article>
     </footer>
 
