--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.8.1</title>
+    <title>FIKO 0.8.2</title>
 
     <link
       rel="icon"
@@ -437,6 +437,22 @@
         </section>
 
         <hr />
+        <section>
+          <hgroup>
+            <h2>Headings</h2>
+            <small>
+              Fat vertical spacing for
+              <em>Readablity!</em>
+            </small>
+            <h1>h1 FIKO 🐸</h1>
+            <h2>h2 FIKO 🐸</h2>
+            <h3>h3 FIKO 🐸</h3>
+            <h4>h4 FIKO 🐸</h4>
+            <h5>h4 FIKO 🐸</h5>
+            <h6>h6 FIKO 🐸</h6>
+          </hgroup>
+        </section>
+        <hr />
 
         <!-- Article | Card -->
 
@@ -496,22 +512,6 @@
           <p>article third paragraph</p>
           <footer>article footer</footer>
         </article>
-
-        <hr />
-
-        <section>
-          <hgroup>
-            <h2>Headings</h2>
-            <small>Note the fat spacing. Readablity!</small>
-          </hgroup>
-
-          <h1>h1 FIKO 🐸</h1>
-          <h2>h2 FIKO 🐸 CSS</h2>
-          <h3>h3 FIKO 🐸 Framework</h3>
-          <h4>h4 FIKO 🐸 CSS Framework</h4>
-          <h5>h4 FIKO 🐸 CSS Framework</h5>
-          <h6>h6 FIKO 🐸 CSS Framework</h6>
-        </section>
 
         <hr />
 
