--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.8.2</title>
+    <title>FIKO 0.8.3</title>
 
     <link
       rel="icon"
@@ -17,8 +17,6 @@
     <style>
       .logo {
         text-align: center;
-        position: relative;
-        top: 2rem;
         opacity: 0.75;
         filter: grayscale(90%)
           drop-shadow(-15px 15px 0 hsl(77, 82%, 49%))
@@ -26,6 +24,51 @@
           drop-shadow(-15px 15px 0 hsl(77, 88%, 18%))
           drop-shadow(15px -15px 0 hsl(207, 87%, 18%));
       }
+
+      @-webkit-keyframes shake-vertical {
+        0%,
+        20%,
+        40%,
+        60%,
+        80%,
+        100% {
+          -webkit-transform: translate3d(0, 7px, 0);
+        }
+        10%,
+        30%,
+        50%,
+        70%,
+        90% {
+          -webkit-transform: translate3d(0, -7px, 0);
+        }
+      }
+
+      @keyframes shake-vertical {
+        0%,
+        20%,
+        40%,
+        60%,
+        80%,
+        100% {
+          transform: translate3d(0, 7px, 0);
+        }
+        10%,
+        30%,
+        50%,
+        70%,
+        90% {
+          transform: translate3d(0, -7px, 0);
+        }
+      }
+      .shake-vertical {
+        -webkit-animation-name: shake-vertical;
+        animation-name: shake-vertical;
+
+        animation-duration: 1s;
+        animation-fill-mode: both;
+      }
+
+      /* TO RUN A DIFFERENT COLOUR, DECLARE LIKE THIS: */
       /* @layer root {
         :root {
           --color-light: lightblue;
@@ -33,45 +76,12 @@
         }
       } */
     </style>
-
-    <!-- <script defer>
-      // THEME SWITCH WITH TOGGLE & USER PREFERENCE DETECTION
-      function toggleTheme() {
-        const currentTheme =
-          document.body.getAttribute('data-theme');
-        if (currentTheme === 'dark') {
-          document.body.setAttribute('data-theme', 'light');
-        } else {
-          document.body.setAttribute('data-theme', 'dark');
-        }
-      }
-
-      // DETECT USER'S PREFERENCE AND SET the data-theme attribute
-      function setUserPreference() {
-        const userPrefersDark =
-          window.matchMedia &&
-          window.matchMedia('(prefers-color-scheme: dark)')
-            .matches;
-        if (userPrefersDark) {
-          document.body.setAttribute('data-theme', 'dark');
-        } else {
-          document.body.setAttribute('data-theme', 'light');
-        }
-      }
-
-      setUserPreference(); // Initially set the user preference
-
-      // UPDATE ON PREFERENCE CHANGE (ex: using DevTools to change it)
-      window
-        .matchMedia('(prefers-color-scheme: dark)')
-        .addListener(setUserPreference);
-    </script> -->
   </head>
   <body>
     <!-- Header -->
-    <header class="invert">
+    <header class="invert full_window hero">
       <nav class="toggle-wrapper">
-        <h1 class="logo">FIKO&nbsp;</h1>
+        <h1 class="logo shake-vertical">FIKO&nbsp;</h1>
 
         <ul class="centre">
           <li><a class="contrast" href="#">Modern</a></li>
@@ -87,7 +97,6 @@
             >
               <span
                 class=""
-                type="button"
                 aria-pressed="false"
                 aria-label="Use Dark Mode"
               >
@@ -471,7 +480,7 @@
           <p>Here it wraps an image.</p>
         </hgroup>
 
-        <article class="border card">
+        <article class="border">
           <h2 class="">Article Card</h2>
           <img
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
@@ -481,12 +490,14 @@
             Get the border like this:
             <code>&lt;article class="border"&gt;</code>
           </p>
-          <a href="#" class="card-button">
-            <button>Call to Action</button>
-          </a>
+          <p>
+            <a href="#">
+              <button>Call to Action</button>
+            </a>
+          </p>
         </article>
 
-        <article class="card">
+        <article>
           <h2>No border article</h2>
           <img
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
@@ -496,12 +507,14 @@
             Article content goes here. Lorem ipsum dolor sit
             amet.
           </p>
-          <a href="#" class="card-button">
-            <button>Call to Action</button>
-          </a>
+          <p>
+            <a href="#" class="card-button">
+              <button>Call to Action</button>
+            </a>
+          </p>
         </article>
 
-        <article class="border card">
+        <article class="border">
           <header>article header</header>
           <p>article first paragraph</p>
           <p>
@@ -549,9 +562,50 @@
           <hr />
           <p>Paragraph after the horizontal line.</p>
         </section>
+
+        <section class="container">
+          <hgroup>
+            <h2>Buttons</h2>
+          </hgroup>
+          <br />
+          <a href="#">
+            <button>no classes button</button>
+          </a>
+          <a href="#">
+            <button class="full">full</button>
+          </a>
+        </section>
+
+        <section class="container">
+          <a href="#">
+            <button class="secondary">secondary</button>
+          </a>
+
+          <a href="#">
+            <button class="full secondary">
+              secondary full
+            </button>
+          </a>
+        </section>
+
+        <section class="container">
+          <a href="#">
+            <button class="contrast">contrast</button>
+          </a>
+
+          <a href="#">
+            <button disabled>disabled</button>
+          </a>
+        </section>
       </div>
 
+      <hr class="space" />
+
       <!-- FULL WIDTH -->
+
+      <h2 class="centre">FULL WIDTH</h2>
+
+      <hr class="space" />
 
       <article>
         <hgroup>
@@ -581,12 +635,14 @@
           </hgroup>
         </article>
 
-        <article class="invert">
-          <header>
-            <code>&lt;article class="invert"&gt;</code>
-          </header>
+        <article class="invert border">
+          <hgroup>
+            <h2>Invert + border</h2>
+            <code>
+              &lt;article class="invert border"&gt;
+            </code>
+          </hgroup>
           <p>Flips light/dark mode.</p>
-          <footer>Convenient!</footer>
         </article>
 
         <article class="border">
@@ -600,22 +656,38 @@
             Are all centered!
           </footer>
         </article>
+
+        <article class="invert">
+          <header>
+            <h2>Invert no border</h2>
+            <code>&lt;article class="invert"&gt;</code>
+          </header>
+          <p>Flips light/dark mode.</p>
+          <footer>Convenient!</footer>
+        </article>
       </section>
 
       <hr />
 
-      <section class="container">
+      <section class="container rows_box">
         <hgroup>
-          <h2>container queries</h2>
+          <h2>Container Queries</h2>
         </hgroup>
 
-        <article class="rows border">
+        <article class="rows border pretty">
           <header>header</header>
           <img
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
             alt="rokma.com"
           />
-          <p>body</p>
+          <div class="body">
+            <p>
+              Diam ridiculus fermentum vestibulum quam fames
+              ad quis euismod rutrum lectus duis adipiscing
+              sem ut porttitor a a torquent orci vulputate
+              sit proin nostra.
+            </p>
+          </div>
           <footer>footer</footer>
         </article>
         <article class="rows border">
@@ -624,7 +696,12 @@
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
             alt="rokma.com"
           />
-          <p>body</p>
+          <p>
+            A pretium consequat suspendisse posuere blandit
+            platea turpis elit amet suspendisse consectetur
+            faucibus lorem condimentum semper felis non a mi
+            donec penatibus risus tortor in ullamcorper.
+          </p>
           <footer>footer</footer>
         </article>
         <article class="rows border">
@@ -687,7 +764,7 @@
         <p>
           FIKO
           <span class="invert">🐸</span>
-          CSS &copy;2023 TOYBREAKER
+          CSS &copy;2023 Toybreaker
         </p>
         <nav class="centre">
           <ul>
@@ -710,7 +787,9 @@
           </ul>
         </nav>
 
-        <small><a id="pixelratio"></a></small>
+        <p>
+          <small><a id="pixelratio"></a></small>
+        </p>
         <br />
       </article>
     </footer>
